# OpenCLDemo

app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  OpenCLDemo.cpp  OpenCLGEMM.cpp  OpenCLGEMM.h  gemm_8x4.opencl  refNR.cpp
app/src/main/cpp/cl_stub-master/: CMakeLists.txt
app/src/main/java/com/cscao/apps/opencldemo/: OpenCLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
